src/objects/Ayuda__c.object
<CustomObject>
    <fields>
        <fullName>AYU_LKP_Compania__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Compañía relacionada con la ayuda.</description>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ayudas</relationshipLabel>
        <relationshipName>Ayudas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AYU_SEL_Tipo__c</fullName>
        <description>Tipos de ayudas que se muestran en las páginas VF de la aplicación</description>
        <label>Tipo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipo_de_ayuda</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AYU_TXT_Descripcion__c</fullName>
        <description>Texto de la ayuda</description>
        <label>Texto</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AYU_TXT_Identificador__c</fullName>
        <description>Código Identificador único HomeServe. (Identificador externo)</description>
        <externalId>true</externalId>
        <label>Código de Ayuda</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ayuda</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AYU_TXT_Identificador__c</columns>
        <columns>AYU_LKP_Compania__c</columns>
        <columns>AYU_TXT_Descripcion__c</columns>
        <columns>AYU_SEL_Tipo__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>AYU-{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ayudas</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(AYU_TXT_Identificador__c ),AYU_TXT_Identificador__c &lt;&gt; Name), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>